--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -128,15 +128,11 @@ spec:
           echo "------+++++++++++++++++++++++++++++=========="                       
           if [ "$changes" = "0" ]; then
             echo "no changes"
-          else 
+          else
+             echo "---- i am here"
+             userName=$(curl -H "Authorization: token $GIT_TOKEN https://api.github.com/user | jq -r '.login')
+             echo "user name is $userName"
              
-             
-             userName=$(curl -H "Authorization: token $GIT+_TOKEN https://api.github.com/user | jq -r '.login')
-             email=$(curl -H "Authorization: token 1949ed2da679b1f8ed455d281ff2cbf964832c55" https://api.github.com/user/emails | jq -r '.[0].email')             
-             git config user.name "$userName"
-             git config user.email "$email"             
-             
-             git config -l             
              exit 1
           fi
       volumeMounts:
