--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -129,8 +129,20 @@ spec:
           if [ "$changes" = "0" ]; then
             echo "no changes"
           else 
-             #userName=$(curl -H "Authorization: token $GIT+_TOKEN https://api.github.com/user | jq -r '.login')
-             curl -H "Authorization: token $GIT+_TOKEN" https://api.github.com/user
+             userName=$(curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/user | jq -r '.login')
+             email=$(curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/user/emails | jq -r '.[0].email')             
+             git config user.name "$userName"
+             git config user.email "$email"             
+             
+             git config -l             
+             git add .
+             git commit -m "sync with app configuration"
+             echo "after commit " 
+             #git config remote.origin.push HEAD
+             git push --set-upstream origin $localBranchName
+             echo "after push origin " 
+             #curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"App Configuration sync - from pipeline","head":"main","base":'"\"$localBranchName\""'}'
+             echo "Changes are committed.  PR needs to be approved to proceed."
              exit 1
           fi
       volumeMounts:
