--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -56,12 +56,13 @@ spec:
           #GIT_URL=$(echo "$REPOSITORY" | sed -e "s/:\/\//:\/\/$GIT_AUTH_USER:$GIT_TOKEN@/g")
           echo $GIT_TOKEN
           #to do - change this
-          replaceStr=$GIT_TOKEN@github
-          echo "$GIT_URL"
+          replaceStr="$GIT_URL@github"
+          echo "$replaceStr"
           echo "$GIT_URL" | sed "s/github/$replaceStr/"
           test=$(echo "$GIT_URL" | sed "s/github/$replaceStr/")
           echo "replace string $test"
           GIT_URL="https://$GIT_TOKEN@github.com/jojustin/toolchain-sample.git"
+
           echo "Cloning $GIT_URL"
           repo_exists=$(git ls-remote $GIT_URL 2>&1 | cut -d':' -f2 | head -1 | awk '{print $1,$2,$3}')
           echo "$repo_exists"
@@ -136,7 +137,6 @@ spec:
              git config user.name "$userName"
              git config user.email "$email"             
              
-             git config -l             
              git add .
              git commit -m "sync with app configuration"
              git push --set-upstream origin $localBranchName
