--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -123,7 +123,7 @@ spec:
           fi
           
           configUrl="${baseUrl}${GUID}/collections/${COLLECTIONID}/config"
-          curl -X GET $configUrl -H 'Authorization: $APIKEY' >> feature.json
+          curl -X GET $configUrl -H 'Authorization: $APIKEY' > feature.json
           cat feature.json     
           echo "Retrieved the Flags. Written to the json" 
           git status --porcelain=v1 2>/dev/null | wc -l
