--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -123,7 +123,7 @@ spec:
           fi
           cat feature.json
           configUrl="${baseUrl}${GUID}/collections/${COLLECTIONID}/config"
-          until $(curl -s -X GET $configUrl -H 'Authorization: $API_KEY' > feature.json); do
+          until $(curl -X GET $configUrl -H 'Authorization: $API_KEY' > feature.json); do
             printf '.'
             sleep 5
           done
