--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -106,7 +106,7 @@ spec:
         - name: GIT_TOKEN
           valueFrom:
             secretKeyRef:
-              name: $(inputs.params.continuous-delivery-context-secret)
+              name: $(params.continuous-delivery-context-secret)
               key: GIT_TOKEN                                 
       command: ["/bin/bash", "-c"]
       args:
@@ -123,7 +123,7 @@ spec:
           fi
           cat feature.json
           configUrl="${baseUrl}${GUID}/collections/${COLLECTIONID}/config"
-          until $(curl --write-out "%{http_code}\n" -X GET $configUrl -H 'Authorization: $API_KEY' > feature.json); do
+          until $(curl -X GET $configUrl -H 'Authorization: Dn5Dly9lqzHKHK7ff8Io1e5FwSUBPFMUQ38dQk40QlaU' > feature.json); do
             printf '.'
             sleep 5
           done
