--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -123,39 +123,16 @@ spec:
           fi
           cat feature.json
           configUrl="${baseUrl}${GUID}/collections/${COLLECTIONID}/config"
-          until $(curl -X GET $configUrl -H 'Authorization: $API_KEY' > feature.json); do
+          until $(curl -X GET $configUrl -H 'Authorization: $API_KEY' > featuretemp.json); do
             printf 'waiting...'
             sleep 5
           done
-          cat feature.json
-          git status --porcelain=v1 2>/dev/null | wc -l
-          changes=$(git status --porcelain=v1 2>/dev/null | wc -l)
-          echo "------+++++++++++++++++++++++++++++=========="                       
-          if [ "$changes" = "0" ]; then
-            echo "no changes"
-          else 
-             userName=$(curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/user | jq -r '.login')
-             email=$(curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/user/emails | jq -r '.[0].email')             
-             git config user.name "$userName"
-             git config user.email "$email"             
-             
-             git config -l
-             localBranchName=acsync_$BUILD_NUMBER
-             git branch $localBranchName $BRANCH     
-             git checkout $localBranchName         
-         
-             git add .
-             git commit -m "sync with app configuration"
-             echo "after commit " 
-             #git config remote.origin.push HEAD
-             git push --set-upstream origin $localBranchName
-             echo "after push origin " 
-             #curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"App Configuration sync - from pipeline","head":"main","base":'"\"$localBranchName\""'}'
-             echo "Changes are committed.  PR needs to be approved to proceed."
-             exit 1
+          cat featuretemp.json
+          if cmp -s feature.json featuretemp.json; then
+              printf 'The file is same'
+          else
+              printf 'The file is not same'
           fi
-          exit 1
-
       volumeMounts:
         - mountPath: /artifacts
           name: task-volume
