--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -128,14 +128,16 @@ spec:
             printf 'waiting...'
             sleep 5
           done
-          ls -la
-          cat feature.json          
-          cat featuretemp.json
-          if cmp -s feature.json featuretemp.json; then
-              printf 'The file is same'
-          else
-              printf 'The file is not same'
-          fi
+          jq --argfile a feature.json --argfile b featuretemp.json -n '($a | (.. | arrays) |= sort) as $a | ($b | (.. | arrays) |= sort) as $b | $a == $b'
+          #ls -la
+          #cat feature.json          
+          #cat featuretemp.json
+          #if cmp -s feature.json featuretemp.json; then
+           #   printf 'The file is same'
+          #else
+           #   printf 'The file is not same'
+          #fi
+          exit 1
           
       volumeMounts:
         - mountPath: /artifacts
