--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -131,7 +131,8 @@ spec:
           ls -la
           #jq --argfile a feature.json --argfile b featuretemp.json -n '($a | (.. | arrays) |= sort) as $a | ($b | (.. | arrays) |= sort) as $b | $a == $b'
           #ls -la
-          cat feature.json   
+          cat feature.json  
+          echo "--------" 
           cat featuretemp.json
           diff feature.json featuretemp.json 
           if cmp -s feature.json featuretemp.json; then
