--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -243,8 +243,8 @@ spec:
         - |
           set -x -o pipefail
           echo "cluster name from param is $clusterName"
-          #folderName=$(echo ${REPOSITORY##*/})
-          #cd $folderName
+          folderName=$(echo ${REPOSITORY##*/})
+          cd $folderName
           BUILT_IMAGE="$imageUrl:$BUILD_NUMBER"
           ibmcloud config --check-version false
           ibmcloud login -a https://cloud.ibm.com -r $REGION --apikey $API_KEY
